--- a/resources/css/category.css
+++ b/resources/css/category.css
@@ -229,7 +229,7 @@
     }
 
     .modal-header {
-        background: linear-gradient(90deg, #0d6efd 60%, #36b3f6 100%);
+        background: #e8e9ea !important;
         color: #fff;
         border-top-left-radius: 1.2rem;
         border-top-right-radius: 1.2rem;
